--- a/frontend/src/Game.css
+++ b/frontend/src/Game.css
@@ -1,5 +1,49 @@
 .game {
-    border: 1px solid red;
     border-radius: 8px;
     margin: auto;
+}
+
+body {
+    background-color: rgb(255, 228, 196);
+}
+
+canvas {
+    border: 4px solid rgb(255, 195, 121);
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.7);
+}
+
+.loss-screen {
+    text-align: center;
+
+}
+
+.loss-screen button {
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 6px 6px 6px #262626;
+    background-color: rgb(255, 195, 121);
+    font-size: large;
+    width: 80%;
+    
+}
+
+.score {
+    background-color: rgb(255, 195, 121);
+    border-radius: 16px;
+    width: 10%;
+    height: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 24px;
+    color: black;
+    box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.7);
+    box-shadow: 6px 6px 6px #262626;
 }
